--- a/RaellShoes/Views/Clientes/DetalhesProduto.cshtml
+++ b/RaellShoes/Views/Clientes/DetalhesProduto.cshtml
@@ -23,7 +23,7 @@
     <link href="~/assets/css/style.css" rel="stylesheet">
 </head>
 
-<body >
+<body>
 
     <!-- ======= Top Bar ======= -->
     <section id="topbar" class="d-flex align-items-center">
@@ -45,16 +45,44 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="">RaellShoes<span>.</span></a></h1>
+            <h1 class="logo"><a href="/clientes">RaellShoes<span>.</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
+            <nav id="navbar" class="navbar">
 
+                <nav id="navbar" class="navbar">
+                    <ul>
+                        <li><a class="nav-link scrollto active" href="/clientes">Início</a></li>
+                        <li><a class="nav-link scrollto" href="/clientes/procurarproduto">Pesquisar um Produto</a></li>
+                        <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
+                        <li><a class="nav-link scrollto" href="">Contato</a></li>
+                        <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
+                        <li><a class="nav-link scrollto" href="/clientes/carrinho">Carrinho</a></li>
+                        <li class="dropdown">
+                            <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
+                            <ul>
+                                <li><a href="/clientes/meuperfil">Meu Perfil</a></li>
+                                <li><a href="/clientes/meusenderecos">Meus Endereços</a></li>
+                                <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
+                                <li><a href="">Meus Pedidos</a></li>
+                                <li><a href="">Troca e Devoluções</a></li>
+                                <li><a href="">Ranking e Vales</a></li>
+                                <li><a href="">Alterar Senha</a></li>
+                                <li><a href="home/index">Sair</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </nav><!-- .navbar -->
+
+                <i class="bi bi-list mobile-nav-toggle"></i>
+            </nav><!-- .navbar -->
 
         </div>
     </header><!-- End Header -->
 
-    <main id="main" data-aos="fade-up" >
+    <main id="main" data-aos="fade-up">
 
         <!-- ======= Breadcrumbs Section ======= -->
         <section class="breadcrumbs">
@@ -162,34 +190,34 @@
 
                         </div>
                 </form>
-</div>
-                <br><br>
-                <div class="portfolio-description" style="padding-left: 14px;">
-                    <h2> @Html.DisplayFor(model => Model.Nome)</h2>
-                    <h5> @Html.DisplayFor(model => Model.Marca)</h5>
-                    <p>
-                        @Html.DisplayFor(model => Model.Descricao)
-                    </p>
-                </div>
+            </div>
+            <br><br>
+            <div class="portfolio-description" style="padding-left: 14px;">
+                <h2> @Html.DisplayFor(model => Model.Nome)</h2>
+                <h5> @Html.DisplayFor(model => Model.Marca)</h5>
+                <p>
+                    @Html.DisplayFor(model => Model.Descricao)
+                </p>
+            </div>
 
 
 
 
 
-                <div class="portfolio-description" style="padding-left: 14px;">
+            <div class="portfolio-description" style="padding-left: 14px;">
 
-                    <h2> DETALHES</h2>
-                    <ul>
-                        <li>Material: @Html.DisplayFor(model => Model.FichaTecnica.Material)</li>
-                        <li>Solado: @Html.DisplayFor(model => Model.FichaTecnica.Solado)</li>
-                        <li>Altura: @Html.DisplayFor(model => Model.FichaTecnica.Altura)</li>
-                        <li>Garantia em Meses: @Html.DisplayFor(model => Model.FichaTecnica.GarantiaMeses)</li>
-                        <li>Cuidados: @Html.DisplayFor(model => Model.FichaTecnica.Cuidados)</li>
-                        <li>Limpeza: @Html.DisplayFor(model => Model.FichaTecnica.Limpeza)</li>
-                    </ul>
-                </div>
+                <h2> DETALHES</h2>
+                <ul>
+                    <li>Material: @Html.DisplayFor(model => Model.FichaTecnica.Material)</li>
+                    <li>Solado: @Html.DisplayFor(model => Model.FichaTecnica.Solado)</li>
+                    <li>Altura: @Html.DisplayFor(model => Model.FichaTecnica.Altura)</li>
+                    <li>Garantia em Meses: @Html.DisplayFor(model => Model.FichaTecnica.GarantiaMeses)</li>
+                    <li>Cuidados: @Html.DisplayFor(model => Model.FichaTecnica.Cuidados)</li>
+                    <li>Limpeza: @Html.DisplayFor(model => Model.FichaTecnica.Limpeza)</li>
+                </ul>
+            </div>
 
-            </div> 
+            </div>
         </section><!-- End Portfolio Details Section -->
 
     </main><!-- End #main -->
