--- a/RaellShoes/Views/Shared/_Layout.cshtml
+++ b/RaellShoes/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 
     <!-- Template Main CSS File -->
     <link href="~/assets/css/style.css" rel="stylesheet">
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
 <body>
