--- a/RaellShoes/Views/Clientes/MeuPerfil.cshtml
+++ b/RaellShoes/Views/Clientes/MeuPerfil.cshtml
@@ -28,52 +28,37 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index-logado.html">RaellShoes<span>.</span></a></h1>
+            <h1 class="logo"><a href="/clientes">RaellShoes<span>.</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
             <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a class="nav-link scrollto " href="index-logado.html">Início</a></li>
-                    <li class="dropdown">
-                        <a href="#"><span>Navegue</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li class="dropdown">
-                                <a href="#"><span>Masculino</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Adulto</a></li>
-                                    <li><a href="#">Infantil</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#"><span>Feminino</span> <i class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Adulto</a></li>
-                                    <li><a href="#">Infantil</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Lançamentos</a></li>
-                            <li><a href="#">Outlet</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="nav-link scrollto" href="sobre-nos.html">Sobre Nós</a></li>
-                    <li><a class="nav-link scrollto" href="contato.html">Contato</a></li>
-                    <li><a class="nav-link scrollto" href="perguntas-frequentes.html">Perguntas Frequentes</a></li>
-                    <li><a class="nav-link scrollto" href="carrinho.html">Carrinho</a></li>
-                    <li class="dropdown  active">
-                        <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Meu Perfil</a></li>
-                            <li><a href="meus-enderecos.html">Meus Endereços</a></li>
-                            <li><a href="meus-cartoes.html">Meus Cartões</a></li>
-                            <li><a href="meus-pedidos.html">Meus Pedidos</a></li>
-                            <li><a href="troca-e-devolucoes.html">Troca e Devoluções</a></li>
-                            <li><a href="ranking-e-vales.html">Ranking e Vales</a></li>
-                            <li><a href="alterar-senha.html">Alterar Senha</a></li>
-                            <li><a href="index.html">Sair</a></li>
-                        </ul>
-                    </li>
-                </ul>
+
+                <nav id="navbar" class="navbar">
+                    <ul>
+                        <li><a class="nav-link scrollto active" href="/clientes">Início</a></li>
+                        <li><a class="nav-link scrollto" href="/clientes/procurarproduto">Pesquisar um Produto</a></li>
+                        <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
+                        <li><a class="nav-link scrollto" href="">Contato</a></li>
+                        <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
+                        <li><a class="nav-link scrollto" href="/clientes/carrinho">Carrinho</a></li>
+                        <li class="dropdown">
+                            <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
+                            <ul>
+                                <li><a href="/clientes/meuperfil">Meu Perfil</a></li>
+                                <li><a href="/clientes/meusenderecos">Meus Endereços</a></li>
+                                <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
+                                <li><a href="">Meus Pedidos</a></li>
+                                <li><a href="">Troca e Devoluções</a></li>
+                                <li><a href="">Ranking e Vales</a></li>
+                                <li><a href="">Alterar Senha</a></li>
+                                <li><a href="home/index">Sair</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </nav><!-- .navbar -->
+
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
@@ -108,7 +93,7 @@
                             <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                 <span>Nome</span>
                                 <input asp-for="Nome" class="form-control" id="name"
-                                       placeholder="Digite seu primeiro nome" minlength="3" required >
+                                       placeholder="Digite seu primeiro nome" minlength="3" required>
                                 <div class="invalid-feedback">
                                     *Campo obrigatório
                                 </div>
@@ -125,7 +110,7 @@
                                 <span>CPF</span>
                                 <input asp-for="Cpf" class="form-control" id="cpf" placeholder="Digite seu CPF"
                                        maxlength="14" onkeypress="formatar('###.###.###-##', this);" pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}"
-                                       required >
+                                       required>
                                 <div class="invalid-feedback">
                                     *Campo obrigatório
                                 </div>
@@ -142,7 +127,6 @@
                                 <span>Gênero</span>
                                 <br>
                                 <select asp-for="Genero" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.Genero>()" class="form-select" required>
-                                  
                                 </select>
 
                             </div>
@@ -166,7 +150,6 @@
                         <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Tipo</span>
                             <select asp-for="Telefone.TipoTelefone" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.TipoTelefone>()" class="form-select" required>
-                                
                             </select>
                             <div class="invalid-feedback">
                                 *Campo obrigatório
@@ -175,7 +158,7 @@
 
                         <div class="col-lg-1 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>DDD</span>
-                            <input asp-for="Telefone.DDD" class="form-control" id="ddd" placeholder="Digite seu DDD" maxlength="3" pattern="[0-9]{2}" required >
+                            <input asp-for="Telefone.DDD" class="form-control" id="ddd" placeholder="Digite seu DDD" maxlength="3" pattern="[0-9]{2}" required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório (2 Dígitos)
                             </div>
@@ -186,7 +169,7 @@
                             <span>Telefone</span>
                             <input asp-for="Telefone.Numero" class="form-control" id="telefone" placeholder="Digite seu Telefone" maxlength="10"
                                    onkeypress="formatar('#####-####', this);" pattern="[0-9]{4}-[0-9]{5}||[0-9]{5}-[0-9]{4}"
-                                   required >
+                                   required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório (9 ou 8 Dígitos)
                             </div>
@@ -234,7 +217,6 @@
                         <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Tipo de Residência</span>
                             <select asp-for="Endereco.TipoResidencia" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.TipoResidencia>()" class="form-select" id="tipoResidencia" required>
-                               
                             </select>
                             <div class="invalid-feedback">
                                 *Campo obrigatório
@@ -244,14 +226,14 @@
                         <div class="col-lg-7 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Logradouro</span>
                             <input asp-for="Endereco.Logradouro" class="form-control" id="logradouro"
-                                   placeholder="Digite o logradouro" required >
+                                   placeholder="Digite o logradouro" required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório
                             </div>
                         </div>
                         <div class="col-lg-1 col-md-2 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Número</span>
-                            <input asp-for="Endereco.Numero" class="form-control" id="numero" placeholder="N°" required >
+                            <input asp-for="Endereco.Numero" class="form-control" id="numero" placeholder="N°" required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório
                             </div>
@@ -264,7 +246,7 @@
 
                         <div class="col-lg-3 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Bairro</span>
-                            <input asp-for="Endereco.Bairro" class="form-control" id="bairro" placeholder="Digite o bairro" required >
+                            <input asp-for="Endereco.Bairro" class="form-control" id="bairro" placeholder="Digite o bairro" required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório
                             </div>
@@ -272,7 +254,7 @@
 
                         <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Cidade</span>
-                            <input asp-for="Endereco.Cidade.Descricao" class="form-control" id="cidade" placeholder="Digite a cidade" required >
+                            <input asp-for="Endereco.Cidade.Descricao" class="form-control" id="cidade" placeholder="Digite a cidade" required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório
                             </div>
@@ -280,7 +262,7 @@
 
                         <div class="col-lg-1 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Estado</span>
-                            <input asp-for="Endereco.Cidade.Estado.Descricao" class="form-control" id="estado" placeholder="Digite o estado" pattern="[A-Z a-z]{2}" maxlength="2" required onChange="maiusculo()" >
+                            <input asp-for="Endereco.Cidade.Estado.Descricao" class="form-control" id="estado" placeholder="Digite o estado" pattern="[A-Z a-z]{2}" maxlength="2" required onChange="maiusculo()">
                             <div class="invalid-feedback">
                                 *Campo obrigatório (Sigla)
                             </div>
@@ -296,7 +278,7 @@
 
                         <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                             <span>Cep</span>
-                            <input asp-for="Endereco.Cep" class="form-control" id="cep" placeholder="Digite o cep" maxlength="9" onkeypress="formatar('#####-###', this);" pattern="[0-9]{5}-[0-9]{3}" required >
+                            <input asp-for="Endereco.Cep" class="form-control" id="cep" placeholder="Digite o cep" maxlength="9" onkeypress="formatar('#####-###', this);" pattern="[0-9]{5}-[0-9]{3}" required>
                             <div class="invalid-feedback">
                                 *Campo obrigatório (Somente números)
                             </div>
@@ -422,64 +404,64 @@
 
 
     <script>
-(function () {
-'use strict'
+        (function () {
+            'use strict'
 
-// Fetch all the forms we want to apply custom Bootstrap validation styles to
-var forms = document.querySelectorAll('.needs-validation')
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll('.needs-validation')
 
-// Loop over them and prevent submission
-Array.prototype.slice.call(forms)
-   .forEach(function (form) {
-       form.addEventListener('submit', function (event) {
-           if (!form.checkValidity()) {
-               event.preventDefault()
-               event.stopPropagation()
+            // Loop over them and prevent submission
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
 
 
-           }
-           form.classList.add('was-validated')
-       }, false)
-   })
-})()
+                        }
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
     </script>
 
     <script>
 
-function encerrarConta() {
-return confirm("Deseja realmente excluir sua conta?");
+        function encerrarConta() {
+            return confirm("Deseja realmente excluir sua conta?");
 
-   //Swal.fire({
-   //    title: 'Você tem certeza?',
-   //    text: "Sentiremos sua falta!",
-   //    icon: 'warning',
-   //    showCancelButton: true,
-   //    confirmButtonColor: '#3085d6',
-   //    cancelButtonColor: '#d33',
-   //    confirmButtonText: 'Sim, excluir a conta!',
-   //    cancelButtonText: 'Não tenho certeza'
-   //}).then((result) => {
-   //    if (result.isConfirmed) {
-   //        form.submit();
-   //        //Swal.fire(
-   //        //    'Sua conta foi deletada',
-   //        //    'Espero que volte logo.',
-   //        //    'success',
-   //        //)
+            //Swal.fire({
+            //    title: 'Você tem certeza?',
+            //    text: "Sentiremos sua falta!",
+            //    icon: 'warning',
+            //    showCancelButton: true,
+            //    confirmButtonColor: '#3085d6',
+            //    cancelButtonColor: '#d33',
+            //    confirmButtonText: 'Sim, excluir a conta!',
+            //    cancelButtonText: 'Não tenho certeza'
+            //}).then((result) => {
+            //    if (result.isConfirmed) {
+            //        form.submit();
+            //        //Swal.fire(
+            //        //    'Sua conta foi deletada',
+            //        //    'Espero que volte logo.',
+            //        //    'success',
+            //        //)
 
-   //        setTimeout(function () {
-   //            window.location.href = "ExcluirPerfil";
-   //        }, 1200);
-   //    }
-   //})
+            //        setTimeout(function () {
+            //            window.location.href = "ExcluirPerfil";
+            //        }, 1200);
+            //    }
+            //})
 
-}
+        }
     </script>
 
     <script>
-function alterarPerfil() {
-    return confirm("Deseja alterar dados da conta?");
-}
+        function alterarPerfil() {
+            return confirm("Deseja alterar dados da conta?");
+        }
     </script>
 
 
