--- a/RaellShoes/Views/Clientes/ProcurarProduto.cshtml
+++ b/RaellShoes/Views/Clientes/ProcurarProduto.cshtml
@@ -38,33 +38,37 @@
     <header id="header" class="d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between">
 
-            <h1 class="logo"><a href="index-logado.html">RaellShoes<span>.</span></a></h1>
+            <h1 class="logo"><a href="/clientes">RaellShoes<span>.</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt=""></a>-->
 
             <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a class="nav-link scrollto " href="">Início</a></li>
-                    <li><a class="nav-link scrollto" href="clientes/procurarproduto">Pesquisar um Produto</a></li>
 
-                    <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
-                    <li><a class="nav-link scrollto" href="">Contato</a></li>
-                    <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
-                    <li><a class="nav-link scrollto" href="">Carrinho</a></li>
-                    <li class="dropdown  active">
-                        <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="">Meu Perfil</a></li>
-                            <li><a href="">Meus Endereços</a></li>
-                            <li><a href="">Meus Cartões</a></li>
-                            <li><a href="">Meus Pedidos</a></li>
-                            <li><a href="">Troca e Devoluções</a></li>
-                            <li><a href="">Ranking e Vales</a></li>
-                            <li><a href="">Alterar Senha</a></li>
-                            <li><a href="">Sair</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <nav id="navbar" class="navbar">
+                    <ul>
+                        <li><a class="nav-link scrollto active" href="/clientes">Início</a></li>
+                        <li><a class="nav-link scrollto" href="/clientes/procurarproduto">Pesquisar um Produto</a></li>
+                        <li><a class="nav-link scrollto" href="">Sobre Nós</a></li>
+                        <li><a class="nav-link scrollto" href="">Contato</a></li>
+                        <li><a class="nav-link scrollto" href="">Perguntas Frequentes</a></li>
+                        <li><a class="nav-link scrollto" href="/clientes/carrinho">Carrinho</a></li>
+                        <li class="dropdown">
+                            <a href="#"><span>Meu Perfil</span> <i class="bi bi-chevron-down"></i></a>
+                            <ul>
+                                <li><a href="/clientes/meuperfil">Meu Perfil</a></li>
+                                <li><a href="/clientes/meusenderecos">Meus Endereços</a></li>
+                                <li><a href="/clientes/meuscartoes">Meus Cartões</a></li>
+                                <li><a href="">Meus Pedidos</a></li>
+                                <li><a href="">Troca e Devoluções</a></li>
+                                <li><a href="">Ranking e Vales</a></li>
+                                <li><a href="">Alterar Senha</a></li>
+                                <li><a href="home/index">Sair</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </nav><!-- .navbar -->
+
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
@@ -131,11 +135,11 @@
                     <button class="col-lg-12 btn btn-success btn-sm" style="color: white;">Procurar</button><br>
                 </form>
             </div>
-        </div>    
+        </div>
 
     </section>
 
-    
+
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
@@ -204,7 +208,7 @@
         </div>
     </footer><!-- End Footer -->
 
-    
+
 
 
 
